# playMusic-second-stage

CloudMusic/: Actions.qml  CMakeLists.txt  Content.qml  LyricPage.qml  Resource.qrc  SongSearchDialog.qml  kugousong.cpp  kugousong.h  lyric.cpp  main.cpp  song.h
Cloudmusic/: CMakeLists.txt  Content.qml  Dialogs.qml  KuGou.qml  Music.pro  SkinDialog.qml  SongSearchDialog.qml  TrackInformationDialog.qml  kugoumv.cpp  kugoumv.h  kugouplaylist.h  kugousong.cpp  kugousong.h  lyric.h  lyricline.h  main.cpp  main.qml  qml.qrc
Cloudmusic-old/: Music.pro  lyricdownload.cpp  lyricdownload.h  lyricline.cpp  main.cpp  song.cpp
Cloudmusic-old/qml/: Actions.qml  Dialogs.qml  KuGou.qml  LyricPage.qml  SongSearchDialog.qml
Cloudmusic/qml/: Content.qml  KuGou.qml  LyricPage.qml  SongSearchDialog.qml  main.qml
zxhmusic/: Music.pro  lyric.cpp  lyric.h  lyricline.cpp  main.cpp
zxhmusic/qml/: Actions.qml  Content.qml  Dialogs.qml  KuGou.qml  SongSearchDialog.qml  main.qml  qml.qrc
